Fix dot aligned image position is wrong

--- a/styles/global.css
+++ b/styles/global.css
@@ -322,7 +322,8 @@ h2, h3 { page-break-after: avoid; }
 }
 .upfront-postpart-featured_image img, .upostdata-part.thumbnail img {
   max-width: 100%;
-  min-width: 100%;
+  /* min-width: 100%; */
+  margin: 0px;
   height: auto;
 }
 
